--- a/apps/analytics/src/app/app.component.html
+++ b/apps/analytics/src/app/app.component.html
@@ -1,11 +1,8 @@
-<main>
+<main [class.open]="appService.navbarState | async">
     <ui-navbar></ui-navbar>
-
-
     <snomed-search></snomed-search>
     <app-query-options></app-query-options>
     <div class="main">
         <router-outlet></router-outlet>
     </div>
-
 </main>
