--- a/apps/analytics/src/app/views/concept-detail/concept-detail.view.html
+++ b/apps/analytics/src/app/views/concept-detail/concept-detail.view.html
@@ -1,8 +1,27 @@
 <ng-container *ngIf="concept$ | async as concept">
+
     <app-navbar-detail-component [concept]="concept"></app-navbar-detail-component>
 
     <app-concept-stats [concept]="concept"></app-concept-stats>
 
+    <div class="row">
+        <div class="col-6">
+            <snd-concept-parents [concept]="concept" [iconTemplate]="pillsTemplate"></snd-concept-parents>
+        </div>
+        <div class="col-6">
+            <snd-concept-childrens [concept]="concept" [iconTemplate]="pillsTemplate"></snd-concept-childrens>
+        </div>
+    </div>
+
+
+    <ng-template #pillsTemplate let-concept="concept">
+        <concept-count-pill [concept]="concept"></concept-count-pill>
+        <!-- <span>HOLA</span> -->
+    </ng-template>
+
     <snd-concept-desc-table [concept]="concept" [refSetLanguage]="refSetLanguage" [terms$]="term$">
     </snd-concept-desc-table>
+
+    <snd-concept-diagram [concept]="concept"></snd-concept-diagram>
+
 </ng-container>
