--- a/apps/analytics/src/app/components/app-query-options/app-query-options.component.scss
+++ b/apps/analytics/src/app/components/app-query-options/app-query-options.component.scss
@@ -1,4 +1,13 @@
 .app-query-options {
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+
     background-color: lightgrey;
-    padding: 6px;
+    padding: 0px 6px;
+
+    div {
+        flex-grow: 1;
+    }
 }
