feat(pacientes): estadisticas de pacientes

--- a/apps/analytics/src/app/views/concept-detail/navbar-detail/navbar-detail.component.html
+++ b/apps/analytics/src/app/views/concept-detail/navbar-detail/navbar-detail.component.html
@@ -5,7 +5,9 @@
             <strong> {{ concept.fsn }} </strong>
         </div>
         <div>
-            <strong>SCTID:</strong> {{ concept.conceptId }}
+            <small>
+                <strong>SCTID:</strong> {{ concept.conceptId }}
+            </small>
         </div>
     </div>
     <div>
