--- a/libs/ui/src/lib/navbar/navbar.component.scss
+++ b/libs/ui/src/lib/navbar/navbar.component.scss
@@ -1,4 +1,4 @@
-// .navbar {
-//     height: var(--navbar-height);
-//     padding: 0 1rem;
-// }
+.navbar {
+    // height: var(--navbar-height);
+    padding: 0 1rem;
+}
