--- a/apps/analytics/src/app/views/profesionales-stats/profesionales-stats.view.html
+++ b/apps/analytics/src/app/views/profesionales-stats/profesionales-stats.view.html
@@ -3,6 +3,6 @@
     <app-navbar-detail-component [concept]="concept"></app-navbar-detail-component>
 
     <ng-container *ngIf="profesionales$ | async as profesionales">
-        <ui-table [values]="profesionales"></ui-table>
+        <ui-table [values]="profesionales" *ngIf="!loading"></ui-table>
     </ng-container>
 </ng-container>
