--- a/libs/ui/src/scss/modal.scss
+++ b/libs/ui/src/scss/modal.scss
@@ -20,7 +20,7 @@
         max-height: 95vh;
         margin: auto;
         transition: opacity;
-        overflow: scroll;
+        overflow: auto;
     }
 }
 
