--- a/apps/analytics/src/app/views/concept-detail/navbar-detail/navbar-detail.component.html
+++ b/apps/analytics/src/app/views/concept-detail/navbar-detail/navbar-detail.component.html
@@ -11,6 +11,6 @@
         </div>
     </div>
     <div>
-        <ui-badge [label]="concept.semtag" type="warning"></ui-badge>
+        <ng-content></ng-content>
     </div>
 </div>
