--- a/libs/ui/src/scss/modal.scss
+++ b/libs/ui/src/scss/modal.scss
@@ -16,8 +16,8 @@
     .ui-modal-content {
         background-color: white;
         min-width: 30vw;
-        max-width: 90vw;
-        max-height: 95vh;
+        // max-width: 90vw;
+        // max-height: 95vh;
         margin: auto;
         transition: opacity;
         overflow: auto;
