--- a/apps/analytics/src/app/views/sanddance-view/sanddance-view.view.html
+++ b/apps/analytics/src/app/views/sanddance-view/sanddance-view.view.html
@@ -1,6 +1,6 @@
 <ng-container *ngIf="concept$ | async as concept">
 
-    <div class="sanddance-contenedor">
+    <div class="fullscreen">
         <app-navbar-detail-component [concept]="concept">
             <button class="btn btn-outline-danger" type="button" (click)="cerrar()">
                 X
