--- a/libs/ui/src/styles.scss
+++ b/libs/ui/src/styles.scss
@@ -10,3 +10,13 @@ $mdi-font-path: '~@mdi/font/fonts/';
 @import 'bootstrap';
 @import './scss/badge';
 @import './scss/modal';
+
+
+.fullscreen {
+    position: fixed;
+    width: 100vw;
+    height: 100vh;
+    top: 0;
+    left: 0;
+    background-color: white;
+}
