--- a/apps/analytics/src/app/components/snomed-concept-search/snomed-search.component.scss
+++ b/apps/analytics/src/app/components/snomed-concept-search/snomed-search.component.scss
@@ -24,4 +24,8 @@
 
 .list-group-item {
     padding: 0.25rem 0.25rem;
+    cursor: pointer;
+     &:hover {
+         background-color: lightgray;
+     }
 }
