--- a/apps/analytics/src/app/views/conceptos-asociados-stats/bubble-charts/bubble-charts.component.html
+++ b/apps/analytics/src/app/views/conceptos-asociados-stats/bubble-charts/bubble-charts.component.html
@@ -1,1 +1,1 @@
-<div #contenedor style="height: 80vh;  overflow: hidden;"></div>
+<div #contenedor style="height: calc(100% - 58px);;  overflow: hidden; background-color: white;"></div>
