--- a/apps/analytics/src/app/views/conceptos-asociados-stats/conceptos-asociados-stats.view.html
+++ b/apps/analytics/src/app/views/conceptos-asociados-stats/conceptos-asociados-stats.view.html
@@ -3,17 +3,17 @@
     <app-navbar-detail-component [concept]="concept"></app-navbar-detail-component>
 
     <ng-container *ngIf="asociados$ | async as asociados">
-        <div class="d-flex justify-content-between">
+        <div class="d-flex justify-content-between ml-3 mr-3">
             <h5>
                 Conceptos en común
             </h5>
 
-            <button class="btn btn-success" type="button" (click)="modal.show();">
+            <button class="btn btn-success btn-sm" type="button" (click)="showGrafico = true">
                 VER GRAFICO
             </button>
 
             <div ngbDropdown>
-                <button ngbDropdownToggle class="btn btn-info dropdown-toggle" type="button">
+                <button ngbDropdownToggle class="btn btn-info dropdown-toggle btn-sm" type="button">
                     {{ semanticCluster$ | async }}
                 </button>
                 <div ngbDropdownMenu class="dropdown-menu" aria-labelledby="dropdownMenuButton">
@@ -32,13 +32,36 @@
                 </div>
             </div>
         </div>
-
-
-        <ui-modal #modal>
-            <app-bubble-charts-component [data]="asociados"></app-bubble-charts-component>
-        </ui-modal>
-
         <ui-table [values]="asociados" *ngIf="!loading"></ui-table>
+
+        <div class="fullscreen" *ngIf="showGrafico">
+            <app-navbar-detail-component [concept]="concept">
+                <span ngbDropdown class="mr-3">
+                    <button ngbDropdownToggle class="btn btn-info dropdown-toggle btn-sm" type="button">
+                        {{ semanticCluster$ | async }}
+                    </button>
+                    <div ngbDropdownMenu class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                        <button ngbDropdownItem (click)="semanticCluster.next('trastorno')">
+                            Trastorno
+                        </button>
+                        <button ngbDropdownItem (click)="semanticCluster.next('hallazgo')">
+                            Hallazgo
+                        </button>
+                        <button ngbDropdownItem (click)="semanticCluster.next('procedimiento')">
+                            Procedimiento
+                        </button>
+                        <button ngbDropdownItem (click)="semanticCluster.next('producto')">
+                            Producto
+                        </button>
+                    </div>
+                </span>
+                <button class="btn btn-outline-danger btn-sm" type="button" (click)="showGrafico = false">
+                    X
+                </button>
+            </app-navbar-detail-component>
+            <app-bubble-charts-component [data]="asociados"></app-bubble-charts-component>
+        </div>
+
 
     </ng-container>
 </ng-container>
