fix(rango-etario): ajusta tabla de rango etario

--- a/apps/analytics/src/app/views/sanddance-view/sanddance-view.view.html
+++ b/apps/analytics/src/app/views/sanddance-view/sanddance-view.view.html
@@ -2,7 +2,7 @@
 
     <div class="fullscreen">
         <app-navbar-detail-component [concept]="concept">
-            <button class="btn btn-outline-danger" type="button" (click)="cerrar()">
+            <button class="btn btn-outline-danger btn-sm" type="button" (click)="cerrar()">
                 X
             </button>
         </app-navbar-detail-component>
