--- a/apps/analytics/src/styles.scss
+++ b/apps/analytics/src/styles.scss
@@ -12,7 +12,8 @@ html {
 body {
 	margin: 0;
 }
+ 
 
-.md-drppicker.double {
-    width: 595px !important;
+.md-drppicker {
+    width: 776px!important;
 }
