--- a/apps/analytics/src/app/components/app-query-options/app-query-options.component.scss
+++ b/apps/analytics/src/app/components/app-query-options/app-query-options.component.scss
@@ -7,7 +7,10 @@
     background-color: lightgrey;
     padding: 0px 6px;
 
-    div {
+    div :nth-child(1){
         flex-grow: 1;
+    }
+    div:nth-child(2){
+        flex-grow: 5;
     }
 }
