--- a/apps/analytics/src/app/views/concept-detail/concept-stats/concept-stats.component.html
+++ b/apps/analytics/src/app/views/concept-detail/concept-stats/concept-stats.component.html
@@ -2,7 +2,7 @@
     <div class="contenedor-datos-principales">
         <div class="bloque-numerico-principal">
             <h1>{{ stats.total }}</h1>
-            <h3>Totales</h3>
+            <h3>Registros</h3>
         </div>
         <div class="bloque-numerico-secundario">
             <article>
