--- a/apps/analytics/src/app/views/main/main.view.html
+++ b/apps/analytics/src/app/views/main/main.view.html
@@ -1,5 +1,5 @@
 <main [class.open]="appService.navbarState | async">
-    <ui-navbar [menuItems]="menuItems" (itemClick)="navClick($event)"></ui-navbar>
+    <ui-navbar [active]="activeUrl" [menuItems]="menuItems" (itemClick)="navClick($event)"></ui-navbar>
     <snomed-search></snomed-search>
     <app-query-options></app-query-options>
     <div class="main">
