--- a/apps/analytics/src/styles.scss
+++ b/apps/analytics/src/styles.scss
@@ -17,3 +17,42 @@ body {
 .md-drppicker {
     width: 776px!important;
 }
+
+div {
+	&::-webkit-scrollbar { 
+        width: 8px;
+		height: 8px;
+		background:  #00A8E0;
+    }
+
+    &::-webkit-scrollbar-button {
+        width: 0;
+        height: 0;
+    }
+
+    &::-webkit-scrollbar-thumb {
+        background:  #00A8E0;
+        border: 0;
+        border-radius: 0;
+    }
+
+    &::-webkit-scrollbar-thumb:hover {
+        background:  #00A8E0;
+    }
+
+    &::-webkit-scrollbar-thumb:active {
+        background: #002738;
+    }
+
+    &::-webkit-scrollbar-track,
+    &::-webkit-scrollbar-track:active,
+    &::-webkit-scrollbar-track:hover {
+        background: #f9f9f9;
+        border: 0;
+        border-radius: 0;
+    }
+
+    &::-webkit-scrollbar-corner {
+        background: transparent;
+    }
+}
