feat(snomed): estilos basicos

--- a/libs/snomed/src/lib/components/concept-childrens/concept-childrens.component.html
+++ b/libs/snomed/src/lib/components/concept-childrens/concept-childrens.component.html
@@ -17,7 +17,7 @@
             </span>
 
             <span style="cursor: pointer;" (dblclick)="onSelect(relacion)">
-                {{ relacion.preferredTerm }}
+                {{ relacion | term }}
             </span>
 
             <ng-container *ngTemplateOutlet="iconTemplate; context: { concept: relacion }"></ng-container>
